# bevy_easy_config

./: Cargo.toml  LICENSE-MIT  README.md
assets/: settings.ron
examples/: example.rs
src/: lib.rs
