[package]
name = "bevy_easy_config"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["serialize", "file_watcher", "multi_threaded"] }
thiserror = "1.0.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[[example]]
name = "example"
path = "examples/example.rs"