[package]
name = "bevy_easy_config"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Bevy plugin that allows you to easily define and instantiate config files"
homepage = "https://github.com/Pnoenix/bevy_easy_config"
repository = "https://github.com/Pnoenix/bevy_easy_config"
readme = "./README.md"
keywords = ["bevy", "gamedev", "config"]


[dependencies]
bevy = { version = "0.14.0", features = ["serialize", "file_watcher", "multi_threaded"] }
thiserror = "1.0.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[[example]]
name = "example"
path = "examples/example.rs"
